Add dummy test using Scala